--- a/package.json
+++ b/package.json
@@ -2,14 +2,8 @@
   "name": "game",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "",
   "dependencies": {
-    "child_process": "^1.0.2",
-    "fs-extra": "^8.1.0",
-    "gulp": "^4.0.2",
-    "gulp-unzip": "^1.1.0",
-    "path": "^0.12.7",
-    "properties-reader": "^2.1.1"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^5.4.0",
@@ -19,16 +13,15 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gameLint": "eslint assets/Script/*.ts",
+    "gameLint": "eslint assets/Script/**/*.ts",
     "lint": "eslint assets/**/*.ts"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/RamilHin/my-linter"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ramil Hin",
+  "license": "MIT",
   "overrides": {
-    "glob": "7.2.3"
   }
 }
